feat: refine ‘openapi.json’
